<resources>
    <string name="app_name">Virgin Money</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Virgin Money</string>
    <string name="nav_header_subtitle">Employee Portal</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_people">Peoples</string>
    <string name="menu_rooms">Rooms</string>
    <string name="menu_peopleDetails">People Detail</string>
    <string name="heading_id">ID:</string>
    <string name="heading_firstName">NAME:</string>
    <string name="heading_jobTitle">JOB TITLE:</string>
    <string name="heading_email">E-MAIL:</string>
    <string name="heading_favouriteColor">FAVOURITE COLOUR:</string>
</resources>