<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="650sp"
        android:layout_margin="40sp"
        app:cardCornerRadius="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_red">

            <androidx.cardview.widget.CardView

                android:id="@+id/profileCardView"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_marginTop="25sp"
                app:cardCornerRadius="100sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/heading_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40sp"
                android:paddingBottom="20dp"
                android:text="@string/heading_id"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileCardView" />

            <TextView
                android:id="@+id/heading_firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="@string/heading_firstName"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heading_id" />

            <TextView
                android:id="@+id/heading_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="@string/heading_email"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heading_firstName" />

            <TextView
                android:id="@+id/heading_jobTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="@string/heading_jobTitle"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heading_email" />

            <TextView
                android:id="@+id/heading_favouriteColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15sp"
                android:text="@string/heading_favouriteColor"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heading_jobTitle" />

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-190dp"
                android:layout_marginTop="40sp"
                android:paddingBottom="20dp"
                android:text="ID"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileCardView" />

            <TextView
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="Name"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                app:layout_constraintLeft_toRightOf="@+id/heading_firstName"
                app:layout_constraintTop_toBottomOf="@id/id" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="E-Mail"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/heading_email"
                app:layout_constraintTop_toBottomOf="@id/firstName" />

            <TextView
                android:id="@+id/jobTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="Job Title"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/heading_jobTitle"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <TextView
                android:id="@+id/favouriteColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:text="Color"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/heading_favouriteColor"
                app:layout_constraintTop_toBottomOf="@id/heading_jobTitle" />

            <View
                android:id="@+id/bottomLine"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/red_virgin"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:id="@+id/bottomLine1"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/red_virgin"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>